--- a/app/src/themes/colors.scss
+++ b/app/src/themes/colors.scss
@@ -1,6 +1,6 @@
-$colors: (
-  white: #FFFFFF,
-  whiteVariant: #f6f6f6,
-  black: #000000,
-  blackVariant: #1f1f1f
-)
+$white: #ffffff;
+$whiteVariant: #f6f6f6;
+$black: #000000;
+$blackVariant: #1f1f1f;
+$primary: #821d30;
+$primary-focus: #a21d40;
