--- a/app/src/components/Navbar/styles.scss
+++ b/app/src/components/Navbar/styles.scss
@@ -7,6 +7,7 @@
 }
 
 #navbar-search-bar {
+  width: 100%;
   display: inline-flex;
   align-items: center;
 }
@@ -20,11 +21,13 @@
 }
 
 .navbar-icon {
-  height: 32px;
-  width: 32px;
+  height: 24px;
+  width: 24px;
   padding: 0.2em;
   margin: 0 0.5em;
   transition: 300ms;
+  vertical-align: middle;
+  color: colors.$whiteVariant;
 
   &:hover {
     background: colors.$primary-focus;
