--- a/app/src/pages/Home/styles.scss
+++ b/app/src/pages/Home/styles.scss
@@ -2,5 +2,6 @@
   margin-top: 3em;
   width: 80vw;
   max-width: 100em;
+  min-width: 30em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
