replaced dialog state hooks with redux

--- a/app/src/themes/colors.scss
+++ b/app/src/themes/colors.scss
@@ -1,6 +1,9 @@
 $white: #ffffff;
 $whiteVariant: #f6f6f6;
+$whiteVariant-focus: #e6e6e6;
 $black: #000000;
 $blackVariant: #1f1f1f;
-$primary: #821d30;
-$primary-focus: #a21d40;
+$primary: #3a4a40;
+$primary-focus: #1d824f;
+$secondary: #007fb6;
+$secondary-focus: #00b3ee;
