deleting employee dialog

--- a/app/src/components/EmployeeList/styles.scss
+++ b/app/src/components/EmployeeList/styles.scss
@@ -1,6 +1,6 @@
 @use "../../themes/colors.scss" as colors;
 
-.emplyee-list-container {
+.employee-list-container {
   table {
     width: 100%;
     border-collapse: collapse;
