--- a/app/src/components/Dialog/styles.scss
+++ b/app/src/components/Dialog/styles.scss
@@ -10,6 +10,24 @@
   overflow: auto;
   backdrop-filter: blur(4px);
   transition: 300ms;
+
+  button {
+    display: flex;
+    width: 250px;
+    padding: 0.8em;
+    margin: 1em auto;
+    outline: none;
+    border: none;
+    border-radius: 30px;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 1em;
+
+    * {
+      padding: 0 4px;
+    }
+  }
 }
 
 .dialog-root-visible {
@@ -24,6 +42,49 @@
   transition: 300ms;
 }
 
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  h1 {
+    color: colors.$primary;
+    margin: 0 10px;
+  }
+
+  h2 {
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    font-size: 1em;
+    padding: 0.3em;
+    margin: 0 10px;
+    border-radius: 20px;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+  }
+}
+
+.button {
+  background-color: colors.$primary;
+  color: colors.$whiteVariant;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
+  transition: 300ms;
+
+  &:hover {
+    background-color: colors.$primary-focus;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3), 0 3px 10px 0 rgba(0, 0, 0, 0.3);
+    transition: 300ms;
+  }
+
+  &:active {
+    background-color: colors.$primary;
+    box-shadow: none;
+    transition: 300ms;
+  }
+}
+
 #dialog-container {
   margin: auto;
   width: 60vw;
@@ -31,4 +92,6 @@
   max-width: 40em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: colors.$whiteVariant;
+  padding: 1em;
+  border-radius: 15px;
 }
