--- a/app/src/pages/Home/styles.scss
+++ b/app/src/pages/Home/styles.scss
@@ -1,7 +1,15 @@
 #home-container {
+  border: 1px solid blue;
   margin-top: 3em;
   width: 80vw;
   max-width: 100em;
   min-width: 30em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  flex-direction: column;
+}
+
+.employee-list {
+  flex: 0 1 auto;
+  border: 10px solid green;
 }
