--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,10 +1,7 @@
-@use 'themes/colors.scss' as colors;
-
 .App {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   min-width: 30em;
   justify-content: center;
-  background: colors.$whiteVariant;
 }
