--- a/app/src/components/Dialog/styles.scss
+++ b/app/src/components/Dialog/styles.scss
@@ -92,7 +92,7 @@
   min-width: 20em;
   max-width: 40em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: colors.$whiteVariant;
+  background: colors.$default_bg;
   padding: 1em;
   border-radius: 15px;
 }
