--- a/app/src/components/DropdownIcon/styles.scss
+++ b/app/src/components/DropdownIcon/styles.scss
@@ -1,5 +1,10 @@
 @use "../../themes/colors.scss" as colors;
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .drop-content {
   max-height: 0;
   position: absolute;
@@ -7,14 +12,16 @@
   z-index: 1;
   overflow: hidden;
   transition: 300ms;
+  font-size: 1.2em;
   div {
     text-align: center;
-    background: colors.$whiteVariant;
+    backdrop-filter: blur(5px);
+    background: colors.$darker_bg;
     padding: 0.4em;
     user-select: none;
 
     &:hover {
-      background: colors.$whiteVariant-focus;
+      background: colors.$darker_bg-focus;
     }
   }
 }
