--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -1,3 +1,5 @@
+@use 'themes/colors.scss' as colors;
+
 * {
   padding: 0;
   margin: 0;
@@ -5,11 +7,14 @@
 
 body {
   margin: 0;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #b8c6db;
+  background: colors.$default_bg;
 }
 
 code {
