--- a/app/src/themes/colors.scss
+++ b/app/src/themes/colors.scss
@@ -3,8 +3,12 @@ $whiteVariant: #f6f6f6;
 $whiteVariant-focus: #e6e6e6;
 $black: #000000;
 $blackVariant: #1f1f1f;
-$primary: #3a4a40;
-$primary-focus: #1d824f;
-$secondary: #007fb6;
-$secondary-focus: #00b3ee;
-$error: #da2a2a;
+$primary: #19b8cb;
+$primary-focus: #4ccdcc;
+$error: #fc7d7c;
+$darker_bg: #00000006;
+$darker_bg-focus: #00000012;
+
+// navbag bg
+$primary_bg: linear-gradient(90deg, #19b8cb 0%, #37c4cc 35%, #69d9d3 80%);
+$default_bg: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
